@@ -1,3 +1,8 @@
+2011-05-06  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	* elf32-arm.c (cortex_a8_erratum_scan): If the stub is a Thumb
+	branch to a PLT entry, redirect it to the PLT's Thumb entry point.
+
 2011-05-04  Alan Modra  <amodra@gmail.com>
 
 	PR ld/12727
